<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/image"
        android:layout_width="232dp"
        android:layout_height="51dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/walmart"
        tools:layout_editor_absoluteY="55dp" />

    <TextView
        android:id="@+id/sign_my_acc"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_marginTop="32dp"
        android:text="@string/sign_my_acc"
        android:textAlignment="center"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/sign_my_acc">

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email" />

        <EditText
            android:id="@+id/edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/passport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passport" />

        <EditText
            android:id="@+id/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/sign_in "
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/sign_in"
            app:backgroundTint="#1572E3" />

        <TextView
            android:id="@+id/forgot_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:autoLink="all"
            android:text="@string/forgot_pass"
            android:textAlignment="viewEnd"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/no_account"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="80dp"
            android:text="@string/no_account"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/button"
            android:textColor="@android:color/holo_blue_dark"
            android:textStyle="bold"
            app:backgroundTint="@android:color/white" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>





